[profile.release-with-debug]
inherits = "release"
debug = true
split-debuginfo = "packed"

[workspace]
members = [
	"example",
	"executor",
	"interface",
	"storage",
	"svm/cli",
	"svm/executor",
	"verifier",
	"rpc",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Soon Labs <maintainers@soon.foundation>"]
repository = "https://github.com/soonlabs/soon"
homepage = "https://www.soo.network/"
license = "Apache-2.0"
edition = "2021"

[workspace.dependencies]
thiserror = "1.0.56"
bincode = "1.3.3"
env_logger = "0.11.0"
log = "0.4.20"
anyhow = "1.0.79"
hex = "0.4.3"
clap = "4.5"
tokio = "1.37"
chrono = "0.4.24"
rand = "0.8.5"
crossbeam-channel = "0.5.13"
tempfile = "3.3.0"
assert_matches = "1.5.0"
async-trait = "0.1.80"
bs58 = "0.5.1"
base64 = "0.22.1"
dashmap = "6.1.0"
futures = "0.3.31"
itertools = "0.13.0"
jsonrpc-core = "18.0.0"
jsonrpc-core-client = "18.0.0"
jsonrpc-http-server = "18.0.0"
jsonrpc-derive = "18.0.0"
jsonrpc-pubsub = "18.0.0"
libc = "0.2.159"
rayon = "1.10.0"
regex = "1.11.0"
serde = "1.0.210"
serde_derive = "1.0.210"
serde_json = "1.0.128"
soketto = "0.8.0"
stream-cancel = "0.8.2"
tokio-util = "0.7.12"

solana-bpf-loader-program = { version = "=2.0.7" }
solana-compute-budget = { version = "=2.0.7" }
solana-program-runtime = { version = "=2.0.7" }
solana-sdk = { version = "=2.0.7" }
solana-svm = { version = "=2.0.7" }
solana-system-program = { version = "=2.0.7" }
solana-logger = { version = "=2.0.7" }
solana-test-validator = { version = "=2.0.7" }
solana-ledger = { version = "=2.0.7" }
solana-runtime = { version = "=2.0.7" }
solana-entry = { version = "=2.0.7" }
solana-accounts-db = { version = "=2.0.7" }
solana-core = { version = "=2.0.7" }
solana-stake-program = { version = "=2.0.7" }
solana-measure = { version = "=2.0.7" }
solana-gossip = { version = "=2.0.7" }
solana-streamer = { version = "=2.0.7" }
solana-rpc = { version = "=2.0.7" }
solana-transaction-status = { version = "=2.0.7" }
solana-account-decoder = { version = "=2.0.7" }
solana-metrics = { version = "=2.0.7" }
solana-client = { version = "=2.0.7" }
solana-connection-cache = { version = "=2.0.7" }
solana-send-transaction-service = { version = "=2.0.7" }
solana-faucet = { version = "=2.0.7" }
solana-inline-spl = { version = "=2.0.7" }
solana-perf = { version = "=2.0.7" }
solana-program = { version = "=2.0.7" }
solana-rayon-threadlimit = { version = "=2.0.7" }
solana-rpc-client-api = { version = "=2.0.7" }
solana-storage-bigtable = { version = "=2.0.7" }
solana-version = { version = "=2.0.7" }
spl-token = "=6.0.0"
spl-token-2022 = "=4.0.0"
spl-pod = "=0.3.0"

igloo-interface = { path = "interface" }
igloo-storage = { path = "storage" }
igloo-verifier = { path = "verifier" }
igloo-rpc = { path = "rpc" }
svm-executor = { path = "svm/executor" }

[patch.crates-io]
#crossbeam-epoch = { git = "https://github.com/anza-xyz/crossbeam", rev = "fd279d707025f0e60951e429bf778b4813d1b6bf" } // Patch `crossbeam-epoch v0.9.5 was not used in the crate graph
solana-curve25519 = { git = "https://github.com/anza-xyz/agave.git", rev = "11b87c1ba32c1895898f2a17502417fccdf1a4c8" }

solana-program = { git = "https://github.com/anza-xyz/agave.git", rev = "11b87c1ba32c1895898f2a17502417fccdf1a4c8" }
solana-zk-sdk = { git = "https://github.com/anza-xyz/agave.git", rev = "11b87c1ba32c1895898f2a17502417fccdf1a4c8" }
solana-zk-token-sdk = { git = "https://github.com/anza-xyz/agave.git", rev = "11b87c1ba32c1895898f2a17502417fccdf1a4c8" }

## patches to use local versions, uncomment if needed
# solana-program = { path = "../agave/sdk/program" }
# solana-zk-sdk = { path = "../agave/zk-sdk" }
# solana-zk-token-sdk = { path = "../agave/zk-token-sdk" }

## patches to use local versions, uncomment if needed
# solana-bpf-loader-program = { path = "../agave/programs/bpf_loader" }
# solana-compute-budget = { path = "../agave/compute-budget" }
# solana-program-runtime = { path = "../agave/program-runtime" }
# solana-sdk = { path = "../agave/sdk" }
# solana-svm = { path = "../agave/svm" }
# solana-system-program = { path = "../agave/programs/system" }
# solana-logger = { path = "../agave/logger" }
# solana-test-validator = { path = "../agave/test-validator" }
# solana-ledger = { path = "../agave/ledger" }
# solana-runtime = { path = "../agave/runtime" }
# solana-entry = { path = "../agave/entry" }
# solana-accounts-db = { path = "../agave/accounts-db" }
# solana-core = { path = "../agave/core" }
# solana-stake-program = { path = "../agave/programs/stake" }
# solana-measure = { path = "../agave/measure" }
# solana-gossip = { path = "../agave/gossip" }
# solana-streamer = { path = "../agave/streamer" }
# solana-rpc = { path = "../agave/rpc" }
# solana-transaction-status = { path = "../agave/transaction-status" }
# solana-account-decoder = { path = "../agave/account-decoder" }
# solana-metrics = { path = "../agave/metrics" }
