[profile.release-with-debug]
inherits = "release"
debug = true
split-debuginfo = "packed"

[workspace]
members = [
	"example",
	"executor",
	"interface",
	"storage",
	"svm/cli",
	"svm/executor",
	"verifier",
	"prio-graph-scheduler"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Soon Labs <maintainers@soon.foundation>"]
repository = "https://github.com/soonlabs/soon"
homepage = "https://www.soo.network/"
license = "Apache-2.0"
edition = "2021"

[workspace.dependencies]
# public crate
thiserror = "1.0.56"
bincode = "1.3.3"
env_logger = "0.11.0"
log = "0.4.20"
anyhow = "1.0.79"
hex = "0.4.3"
clap = "4.5"
tokio = "1.37"
chrono = "0.4.24"
rand = "0.8.5"
crossbeam-channel = "0.5.13"
tempfile = "3.3.0"
assert_matches = "1.5.0"
async-trait = "0.1.80"
ahash = "0.8.11"
arrayvec = "0.7.6"
itertools = "0.13.0"
min-max-heap = "1.3.0"
prio-graph = "0.2.1"

# solana crate
solana-bpf-loader-program = "2.0.13"
solana-compute-budget = "2.0.13"
solana-program = "2.0.13"
solana-program-runtime = "2.0.13"
solana-sdk = "2.0.13"
solana-svm = "2.0.13"
solana-system-program = "2.0.13"
solana-logger = "2.0.13"
solana-test-validator = "2.0.13"
solana-ledger = "2.0.13"
solana-runtime = "2.0.13"
solana-entry = "2.0.13"
solana-accounts-db = "2.0.13"
solana-core = "2.0.13"
solana-stake-program = "2.0.13"
solana-measure = "2.0.13"
solana-gossip = "2.0.13"
solana-streamer = "2.0.13"
solana-rpc = "2.0.13"
solana-transaction-status = "2.0.13"
solana-account-decoder = "2.0.13"
solana-metrics = "2.0.13"
solana-client = "2.0.13"
solana-connection-cache = "2.0.13"
solana-send-transaction-service = "2.0.13"
solana-cost-model = "2.0.13"
solana-poh = "2.0.13"
solana-perf = "2.0.13"
solana-runtime-transaction = "2.0.13"
## some crate not in 2.0.X
solana-sanitize = { git = "https://github.com/anza-xyz/agave.git", rev = "47c439a28b7dbd25feef1e6d8a019a2c0c0fc821" }
solana-short-vec = { git = "https://github.com/anza-xyz/agave.git", rev = "47c439a28b7dbd25feef1e6d8a019a2c0c0fc821" }
spl-token = "=6.0.0"
spl-token-2022 = "=4.0.0"

# member crate
igloo-interface = { path = "interface" }
igloo-storage = { path = "storage" }
igloo-verifier = { path = "verifier" }
svm-executor = { path = "svm/executor" }
solana-prio-graph-scheduler = { path = "prio-graph-scheduler" }

[patch.crates-io]
#crossbeam-epoch = { git = "https://github.com/anza-xyz/crossbeam", rev = "fd279d707025f0e60951e429bf778b4813d1b6bf" } // Patch `crossbeam-epoch v0.9.5 was not used in the crate graph
solana-curve25519 = { git = "https://github.com/anza-xyz/agave.git", rev = "11b87c1ba32c1895898f2a17502417fccdf1a4c8" }

solana-program = { git = "https://github.com/anza-xyz/agave.git", rev = "11b87c1ba32c1895898f2a17502417fccdf1a4c8" }
solana-zk-sdk = { git = "https://github.com/anza-xyz/agave.git", rev = "11b87c1ba32c1895898f2a17502417fccdf1a4c8" }
solana-zk-token-sdk = { git = "https://github.com/anza-xyz/agave.git", rev = "11b87c1ba32c1895898f2a17502417fccdf1a4c8" }

## patches to use local versions, uncomment if needed
# solana-program = { path = "../agave/sdk/program" }
# solana-zk-sdk = { path = "../agave/zk-sdk" }
# solana-zk-token-sdk = { path = "../agave/zk-token-sdk" }

## patches to use local versions, uncomment if needed
# solana-bpf-loader-program = { path = "../agave/programs/bpf_loader" }
# solana-compute-budget = { path = "../agave/compute-budget" }
# solana-program-runtime = { path = "../agave/program-runtime" }
# solana-sdk = { path = "../agave/sdk" }
# solana-svm = { path = "../agave/svm" }
# solana-system-program = { path = "../agave/programs/system" }
# solana-logger = { path = "../agave/logger" }
# solana-test-validator = { path = "../agave/test-validator" }
# solana-ledger = { path = "../agave/ledger" }
# solana-runtime = { path = "../agave/runtime" }
# solana-entry = { path = "../agave/entry" }
# solana-accounts-db = { path = "../agave/accounts-db" }
# solana-core = { path = "../agave/core" }
# solana-stake-program = { path = "../agave/programs/stake" }
# solana-measure = { path = "../agave/measure" }
# solana-gossip = { path = "../agave/gossip" }
# solana-streamer = { path = "../agave/streamer" }
# solana-rpc = { path = "../agave/rpc" }
# solana-transaction-status = { path = "../agave/transaction-status" }
# solana-account-decoder = { path = "../agave/account-decoder" }
# solana-metrics = { path = "../agave/metrics" }
