[package]
name = "example"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
rollups-interface = { workspace = true }
solana-sdk = { workspace = true }
anyhow = { workspace = true }
