[package]
name = "example"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
rollups-interface = { workspace = true }
solana-sdk = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
tokio = { workspace = true, features = ["full"] }
chrono = { workspace = true }
rand = { workspace = true }
env_logger = { workspace = true }
