[package]
name = "igloo-executor"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
igloo-storage = { workspace = true }
igloo-verifier = { workspace = true }
tempfile = { workspace = true }

thiserror = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
crossbeam-channel = { workspace = true }
async-trait = { workspace = true }

solana-ledger = { workspace = true }
solana-accounts-db = { workspace = true }
solana-sdk = { workspace = true }
solana-svm = { workspace = true }
solana-runtime = { workspace = true, features = ["dev-context-only-utils"] }
solana-core = { workspace = true }
solana-program = { workspace = true }
ahash = "0.8.11"
rand = "0.8.5"
min-max-heap = "1.3.0"
itertools = "0.13.0"

[dev-dependencies]
anyhow = { workspace = true }

[[bin]]
name = "scheduling-simulation"
path = "bin/scheduling_simulation.rs"