[package]
name = "igloo-rpc"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
futures = { workspace = true }
jsonrpsee = { workspace = true }
tokio = { workspace = true }