[package]
name = "igloo-scheduler"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
solana-sdk = { workspace = true }
solana-poh = { workspace = true }
solana-metrics = { workspace = true }
solana-ledger = { workspace = true }
solana-runtime = { workspace = true }
solana-gossip = { workspace = true }
solana-cost-model = { workspace = true }
solana-measure = { workspace = true }
solana-program = { workspace = true }

ahash = { workspace = true }
prio-graph = { workspace = true }
thiserror = { workspace = true }
itertools = { workspace = true }
log = { workspace = true }
crossbeam-channel = { workspace = true }
arrayvec = { workspace = true }
min-max-heap = { workspace = true }
tempfile = { workspace = true }

igloo-executor = { workspace = true }
igloo-storage = { workspace = true }
igloo-verifier = { workspace = true }

[dev-dependencies]
assert_matches = { workspace = true }
solana-compute-budget = { workspace = true }
solana-perf = { workspace = true }
solana-runtime-transaction = { workspace = true }
solana-sanitize = { workspace = true }
solana-short-vec = { workspace = true }
solana-sdk = { workspace = true, features = ["dev-context-only-utils"] }

bincode = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[features]
dev-context-only-utils = ["solana-runtime/dev-context-only-utils"]


[[bin]]
name = "scheduling-simulation"
path = "bin/scheduling_simulation.rs"