[package]
name = "rollups-storage"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
thiserror = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
tempfile = { workspace = true }
crossbeam-channel = { workspace = true }
rand = { workspace = true }

solana-ledger = { workspace = true }
solana-accounts-db = { workspace = true }
solana-sdk = { workspace = true }
solana-svm = { workspace = true }
solana-runtime = { workspace = true }
solana-core = { workspace = true }
solana-stake-program = { workspace = true }
solana-entry = { workspace = true }

rollups-interface = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
svm-executor = { workspace = true }
bincode = { workspace = true }