[package]
name = "igloo-storage"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
thiserror = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
tempfile = { workspace = true }
crossbeam-channel = { workspace = true }
rand = { workspace = true }
assert_matches = { workspace = true }

solana-client = { workspace = true }
solana-ledger = { workspace = true }
solana-accounts-db = { workspace = true }
solana-sdk = { workspace = true }
solana-svm = { workspace = true }
solana-runtime = { workspace = true }
solana-core = { workspace = true }
solana-stake-program = { workspace = true }
solana-entry = { workspace = true }
solana-measure = { workspace = true }
solana-gossip = { workspace = true }
solana-streamer = { workspace = true }
solana-rpc = { workspace = true }
solana-send-transaction-service = { workspace = true }
solana-transaction-status = { workspace = true }
solana-account-decoder = { workspace = true }
solana-metrics = { workspace = true }
solana-connection-cache = { workspace = true }
spl-token = { workspace = true }
spl-token-2022 = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
svm-executor = { workspace = true }
bincode = { workspace = true }
solana-compute-budget = { workspace = true }
solana-bpf-loader-program = { workspace = true }
solana-system-program = { workspace = true }
solana-program-runtime = { workspace = true }
tokio = { workspace = true, features = ["full"] }
